@@ -13,13 +13,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.theInstance;
-import org.junit.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.opentcs.data.model.Point;
 import org.opentcs.data.model.Vehicle;
@@ -41,7 +41,7 @@ public class CompositeOrderCandidateComparatorTest {
   private DefaultDispatcherConfiguration configuration;
   private Map<String, Comparator<AssignmentCandidate>> availableComparators;
 
-  @Before
+  @BeforeEach
   public void setUp() {
     configuration = Mockito.mock(DefaultDispatcherConfiguration.class);
     availableComparators = new HashMap<>();
@@ -52,7 +52,7 @@ public class CompositeOrderCandidateComparatorTest {
   public void sortAlphabeticallyForOtherwiseEqualInstances() {
 
     Mockito.when(configuration.orderCandidatePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeOrderCandidateComparator(configuration, availableComparators);
 
     AssignmentCandidate candidate1 = candidateWithName("AA");
@@ -74,7 +74,7 @@ public class CompositeOrderCandidateComparatorTest {
   @Test
   public void sortsByAgeAndName() {
     Mockito.when(configuration.orderCandidatePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeOrderCandidateComparator(configuration, availableComparators);
 
     AssignmentCandidate candidate1 = candidateWithNameAndCreationtime("AA", 2);
@@ -97,7 +97,7 @@ public class CompositeOrderCandidateComparatorTest {
   public void sortsByAgeAndNameAndInitialRoutingCost() {
     String deadlineKey = "BY_DEADLINE";
     Mockito.when(configuration.orderCandidatePriorities())
-        .thenReturn(Arrays.asList(deadlineKey));
+        .thenReturn(List.of(deadlineKey));
     availableComparators.put(deadlineKey,
                              new CandidateComparatorByDeadline());
     comparator = new CompositeOrderCandidateComparator(configuration, availableComparators);
@@ -148,9 +148,10 @@ public class CompositeOrderCandidateComparatorTest {
     Route.Step dummyStep
         = new Route.Step(null, null, new Point("Point1"), Vehicle.Orientation.FORWARD, 1);
     Route route = new Route(Arrays.asList(dummyStep), 10);
-    List<DriveOrder> driveOrders = new LinkedList<>();
-    driveOrders.add(new DriveOrder(new DriveOrder.Destination(new Point("Point2").getReference()))
-        .withRoute(route));
+    List<DriveOrder> driveOrders = List.of(
+        new DriveOrder(new DriveOrder.Destination(new Point("Point2").getReference()))
+            .withRoute(route)
+    );
     return driveOrders;
   }
 
