@@ -8,17 +8,16 @@
 package org.opentcs.strategies.basic.dispatching.phase.assignment.priorization;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.theInstance;
-import org.junit.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.opentcs.data.model.Vehicle;
 import org.opentcs.strategies.basic.dispatching.DefaultDispatcherConfiguration;
@@ -35,7 +34,7 @@ public class CompositeVehicleComparatorTest {
   private DefaultDispatcherConfiguration configuration;
   private Map<String, Comparator<Vehicle>> availableComparators;
 
-  @Before
+  @BeforeEach
   public void setUp() {
     configuration = Mockito.mock(DefaultDispatcherConfiguration.class);
     availableComparators = new HashMap<>();
@@ -45,7 +44,7 @@ public class CompositeVehicleComparatorTest {
   @Test
   public void sortNamesUpForOtherwiseEqualInstances() {
     Mockito.when(configuration.vehiclePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeVehicleComparator(configuration, availableComparators);
 
     Vehicle candidate1 = new Vehicle("AA");
@@ -67,7 +66,7 @@ public class CompositeVehicleComparatorTest {
   @Test
   public void sortsByNameAndEnergylevel() {
     Mockito.when(configuration.vehiclePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeVehicleComparator(configuration, availableComparators);
 
     Vehicle candidate1 = new Vehicle("AA").withEnergyLevel(1);
@@ -90,7 +89,7 @@ public class CompositeVehicleComparatorTest {
   public void sortsByNameEnergylevelRoutingCost() {
 
     Mockito.when(configuration.vehiclePriorities())
-        .thenReturn(Arrays.asList("IDLE_FIRST"));
+        .thenReturn(List.of("IDLE_FIRST"));
     availableComparators.put("IDLE_FIRST",
                              new VehicleComparatorIdleFirst());
 
